--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,5 @@
             "email": "kksasteph888@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {}
+    "minimum-stability": "dev"
 }
