--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "stephane888/drupal_utility",
-    "description": "utilitaire drupal",
-    "type": "library",
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Stephane888\\DrupalUtility\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "kouwa stephane",
-            "email": "kksasteph888@gmail.com"
-        }
-    ],
-    "minimum-stability": "dev"
+  "name": "habeuk/drupal_utility",
+  "description": "utilitaire drupal",
+  "type": "library",
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "Stephane888\\DrupalUtility\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "kouwa stephane",
+      "email": "kksasteph888@gmail.com"
+    }
+  ],
+  "minimum-stability": "dev"
 }
